--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
   deploy:
     runs-on: ubuntu-22.04
     permissions:
-      contents: read
+      contents: write
       pages: write
     concurrency:
       group: ${{ github.workflow }}-${{ github.ref }}
